# hexagonal-wallpaper-generator

./: .gitignore  README.md  pyproject.toml
notebook/: demo.py
src/hexwallpaper/: generator.py  hexgrid.py  main.py  svgwriter.py
