[project]
name = "hexwallpaper"
version = "0.1.0"
description = ""
authors = [
    {name = "azzahramona",email = "azzahramona@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow >=12.0.0,<13.0.0",
    "numpy >=2.3.5,<3.0.0",
    "marimo >=0.17.8,<0.18.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [{ include = "hexwallpaper", from = "src" }]
